# hugh-event

./: .travis.yml  CMakeLists.txt  README.rst
inc/hugh/: events.hpp
inc/hugh/event/: base.hpp
share/doc/hugh/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/event/: CMakeLists.txt  base.cpp
src/lib/event/test/: CMakeLists.txt  base.cpp
